--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -6,7 +6,7 @@ h4,
 h5,
 h6 {
 	text-wrap: balance;
-	margin: 3rem 0 1rem;
+	// margin: 3rem 0 1rem;
 	font-weight: lighter;
 	line-height: normal;
 	font-family: var(--font-antique);
